user drag still not working on mobile

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
         font-family: Arial, sans-serif;
     }
 
-    /* Prevents dragging */
+    /* Prevents dragging so that game continues seamlessly*/
     .no-drag {
-        -webkit-user-drag: none;
-        user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    user-select: none;
     }
 
     /* Is invisible if game has not started */
