--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     let ballSize = Math.min(72, Math.max(36, Math.floor((screenSize / 2) / 23))) /* Determine ball size based on screen size */
     let fruitSize = ballSize * 1.42; /* Determine fruit size based on ball size */
     let throwAreaSize = ballSize * 10; /* Throw area size based on ball */
-    let fruitAmount = Math.round(screenSize / 900) /* Amount of fruit based on screen size */
+    let fruitAmount = Math.round(screenSize / 750) /* Amount of fruit based on screen size */
     let fruits = document.querySelectorAll('.fruit');  /* All fruits on screen */
     // Game-start Constants
     const gameElements = document.getElementsByClassName('game-start-dependant'); /* All fruits on screen */
@@ -503,7 +503,7 @@
                     ball.style.height = `${ballSize}px`; // Ball height change
 
                     // Generate fruit
-                    for (let i = 0; i < 4; i++) {
+                    for (let i = 0; i < fruitAmount; i++) {
                         generateSuperFruit();
                     }
 
@@ -652,7 +652,7 @@
             introText.style.opacity = 0;
 
             // Generate initial fruits
-            for (let i = 0; i < 3; i++) {
+            for (let i = 0; i < fruitAmount; i++) {
                 generateFruit();
             }
 
